--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,18 +2,27 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:recommended",
-    ":dependencyDashboard",
-    "schedule:daily",
-    ":automergeMinor"
+    ":dependencyDashboard"
   ],
+  "schedule": [ "* 0-3 * * *" ],
   "nix": {
     "enabled": true
+  },
+  "lockFileMaintenance": {
+    "enabled": true,
+    "commitMessageTopic": "flake.lock",
+    "schedule": [ "* 3-6 * * *" ],
+    "automerge": true,
+    "ignoreTests": true
   },
   "major": {
     "dependencyDashboardApproval": true
   },
-  "lockFileMaintenance": {
-    "enabled": true,
-    "commitMessageTopic": "flake.lock"
-  }
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true,
+      "ignoreTests": true
+    }
+  ]
 }
