--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,12 +7,19 @@
   ],
   packageRules: [
     {
-      matchUpdateTypes: [ "major" ],
+      matchUpdateTypes: [
+        "major",
+      ],
       automerge: false,
       dependencyDashboardApproval: true,
     },
     {
-      matchUpdateTypes: ["minor", "patch", "pin", "digest"],
+      matchUpdateTypes: [
+        "minor",
+        "patch",
+        "pin",
+        "digest",
+      ],
       automerge: true,
       ignoreTests: true,
     },
