--- a/.github/workflows/nix-flake-update.yml
+++ b/.github/workflows/nix-flake-update.yml
@@ -42,6 +42,7 @@ jobs:
         # https://github.com/juliangruber/approve-pull-request-action
       - name: Merge Update flake.lock PR
         id: git-merge
+        # cSpell:words juliangruber
         uses: juliangruber/merge-pull-request-action@9234b8714dda9a08f3d1df5b2a6a3abd7b695353 # v1.3.1
         if: ${{ steps.nix-update.outputs.pull-request-number != null }}
         with:
