--- a/.cspell.yaml
+++ b/.cspell.yaml
@@ -7,6 +7,7 @@ ignorePaths:
   - /result
   - .sops.yaml
   - .cspell.yaml
+  - '*.patch'
 dictionaryDefinitions:
   - name: project
     path: ./.cspell.txt
