--- a/.cspell.yaml
+++ b/.cspell.yaml
@@ -8,6 +8,7 @@ ignorePaths:
   - .sops.yaml
   - .cspell.yaml
   - '*.patch'
+  - .gitignore
 dictionaryDefinitions:
   - name: project
     path: ./.cspell.txt
