yab: transform ags to yab

--- a/.cspell.yaml
+++ b/.cspell.yaml
@@ -9,6 +9,7 @@ ignorePaths:
   - .cspell.yaml
   - '*.patch'
   - .gitignore
+  - '.idea'
 dictionaryDefinitions:
   - name: project
     path: ./.cspell.txt
