nix-flake-update: update nix flake action to update all flakes

--- a/.cspell.yaml
+++ b/.cspell.yaml
@@ -10,6 +10,7 @@ ignorePaths:
   - '*.patch'
   - .gitignore
   - '.idea'
+  - flake.lock
 dictionaryDefinitions:
   - name: project
     path: ./.cspell.txt
