--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule ".config/cspell-dicts"]
 	path = .config/cspell-dicts
-	url = git@github.com:Joker9944/cspell-dicts.git
+	url = https://github.com/Joker9944/cspell-dicts.git
