--- a/.github/workflows/nix-flake-update.yaml
+++ b/.github/workflows/nix-flake-update.yaml
@@ -23,10 +23,26 @@ jobs:
         id: git-checkout
         uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
-        # cSpell:ignore drengskapur gitbot
+        # cSpell:ignore kota65535
       - name: Git Config
         id: git-config
-        uses: drengskapur/gitbot-config@00aecab0a790b146951f9e0c48f564eaf26a9df6 # v1.1.2
+        uses: kota65535/github-git-config-action@519e6d26e10ccdd2ac3437dd5ed32c4042583f09 # v2.2.0
+
+        with:
+          user.name: Joker9944
+          user.email: 9194199+Joker9944@users.noreply.github.com
+          github-token: ${{ secrets.PAT }}
+
+        # cSpell:ignore ghaction-import-gpg
+      - name: GPG Config
+        id: gpg-config
+        uses: crazy-max/ghaction-import-gpg@e89d40939c28e39f97cf32126055eeae86ba74ec # v6.3.0
+
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
 
         # cSpell:ignore cachix
       - name: Install Nix
@@ -43,6 +59,9 @@ jobs:
         uses: peter-evans/create-pull-request@98357b18bf14b5342f975ff684046ec3b2a07725 # v8.0.0
 
         with:
+          token: ${{ secrets.PAT }}
+          committer: Joker9944 <9194199+Joker9944@users.noreply.github.com>
+
           branch: ci/nix-flake-update
 
           title: Lock file maintenance flake.lock
