--- a/.github/workflows/nix-flake-update.yaml
+++ b/.github/workflows/nix-flake-update.yaml
@@ -23,15 +23,21 @@ jobs:
         id: git-checkout
         uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
 
-        # cSpell:ignore drengskapur gitbot
-      - name: Git Config
-        id: git-config
-        uses: drengskapur/gitbot-config@00aecab0a790b146951f9e0c48f564eaf26a9df6 # v1.1.2
-
         # cSpell:ignore cachix
       - name: Install Nix
         id: nix-install
         uses: cachix/install-nix-action@4e002c8ec80594ecd40e759629461e26c8abed15 # v31.9.0
+
+        # cSpell:ignore ghaction-import-gpg
+      - name: GPG Config
+        id: gpg-config
+        uses: crazy-max/ghaction-import-gpg@e89d40939c28e39f97cf32126055eeae86ba74ec # v6.3.0
+
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
 
       - name: Update Flakes
         id: nix-update
@@ -43,8 +49,6 @@ jobs:
         uses: peter-evans/create-pull-request@98357b18bf14b5342f975ff684046ec3b2a07725 # v8.0.0
 
         with:
+          token: ${{ secrets.PAT }}
           branch: ci/nix-flake-update
-
           title: Lock file maintenance flake.lock
-
-          sign-commits: true
