--- a/.github/workflows/nix-packages-update.yaml
+++ b/.github/workflows/nix-packages-update.yaml
@@ -23,15 +23,21 @@ jobs:
         id: git-checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
-        # cSpell:ignore drengskapur gitbot
-      - name: Git Config
-        id: git-config
-        uses: drengskapur/gitbot-config@00aecab0a790b146951f9e0c48f564eaf26a9df6 # v1.1.2
-
         # cSpell:ignore cachix
       - name: Install Nix
         id: nix-install
         uses: cachix/install-nix-action@4e002c8ec80594ecd40e759629461e26c8abed15 # v31.9.0
+
+        # cSpell:ignore ghaction-import-gpg
+      - name: GPG Config
+        id: gpg-config
+        uses: crazy-max/ghaction-import-gpg@e89d40939c28e39f97cf32126055eeae86ba74ec # v6.3.0
+
+        with:
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          passphrase: ${{ secrets.GPG_PASSPHRASE }}
+          git_user_signingkey: true
+          git_commit_gpgsign: true
 
       - name: Update Packages
         id: nix-update
@@ -43,22 +49,15 @@ jobs:
         uses: peter-evans/create-pull-request@98357b18bf14b5342f975ff684046ec3b2a07725 # v8.0.0
 
         with:
+          token: ${{ secrets.PAT }}
           branch: ci/nix-packages-update
+          title: "packages: update versions"
 
-          title: Lock file maintenance flake.lock
-
-          sign-commits: true
-
-        # This is a workaround since no code checks are configured for Github auto merge, if that ever changes switch to:
-        # https://github.com/juliangruber/approve-pull-request-action
-        # cSpell:ignore juliangruber
-      - name: Merge Update flake.lock PR
-        id: git-merge
-        uses: juliangruber/merge-pull-request-action@9234b8714dda9a08f3d1df5b2a6a3abd7b695353 # v1.3.1
-        if: ${{ steps.git-pr-create.outputs.pull-request-number != null }}
+      - name: Enable Automerge
+        id: git-pr-automerge
+        uses: peter-evans/enable-pull-request-automerge@a660677d5469627102a1c1e11409dd063606628d # v3.00
 
         with:
-          number: ${{ steps.git-pr-create.outputs.pull-request-number }}
-          method: squash
-
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT }}
+          pull-request-number: ${{ steps.git-pr-create.outputs.pull-request-number }}
+          merge-method: rebase
