workflows: use nix setup composite everywhere

--- a/.github/workflows/nix-flake-check.yaml
+++ b/.github/workflows/nix-flake-check.yaml
@@ -25,7 +25,7 @@ jobs:
           submodules: true
 
       - name: Setup nix
-        id: nix-install
+        id: nix-setup
         uses: ./.github/composites/nix-setup
 
       - name: Run flake check
