--- a/.github/workflows/nix-packages-update.yaml
+++ b/.github/workflows/nix-packages-update.yaml
@@ -23,10 +23,9 @@ jobs:
         id: git-checkout
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
-        # cSpell:ignore cachix
-      - name: Install Nix
-        id: nix-install
-        uses: cachix/install-nix-action@4e002c8ec80594ecd40e759629461e26c8abed15 # v31.9.0
+      - name: Setup nix
+        id: nix-setup
+        uses: ./.github/composites/nix-setup
 
         # cSpell:ignore ghaction-import-gpg
       - name: GPG Config
