workflows: explicitly ref composite

--- a/.github/workflows/nix-flake-check.yaml
+++ b/.github/workflows/nix-flake-check.yaml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Setup nix
         id: nix-setup
-        uses: ./.github/composites/nix-setup
+        uses: Joker9944/nix-config/.github/composites/nix-setup@main
 
       - name: Run flake check
         id: nix-check
